Allow endpoints again